[project]
name = "cistup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "affine>=2.4.0",
    "altair==5.5.0",
    "attrs>=24.2.0",
    "blinker==1.9.0",
    "branca>=0.8.0",
    "brotli>=1.1.0",
    "cachetools==5.5.0",
    "certifi>=2024.12.14",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.0",
    "click>=8.1.7",
    "click-plugins>=1.1.1",
    "cligj>=0.7.2",
    "contourpy>=1.3.1",
    "cycler>=0.12.1",
    "decorator==5.1.1",
    "folium>=0.19.2",
    "fonttools>=4.55.3",
    "future==1.0.0",
    "geocoder==1.38.1",
    "geographiclib==2.0",
    "geopandas>=1.0.1",
    "geopy==2.4.1",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "h2>=4.1.0",
    "hpack>=4.0.0",
    "hyperframe>=6.0.1",
    "idna>=3.10",
    "jinja2>=3.1.4",
    "joblib>=1.4.2",
    "jsonschema-specifications==2024.10.1",
    "jsonschema==4.23.0",
    "kiwisolver>=1.4.7",
    "mapclassify>=2.8.1",
    "markdown-it-py==3.0.0",
    "markupsafe>=3.0.2",
    "matplotlib==3.9.4",
    "mdurl==0.1.2",
    "munkres==1.1.4",
    "narwhals==1.18.3",
    "networkx>=3.4.2",
    "numpy>=2.2.0",
    "osmnx>=2.0.0",
    "packaging>=24.2",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "protobuf==5.29.1",
    "pyarrow==18.1.0",
    "pycparser>=2.22",
    "pydeck==0.9.1",
    "pygments==2.18.0",
    "pyogrio>=0.10.0",
    "pyparsing>=3.2.0",
    "pyproj>=3.7.0",
    "pysocks>=1.7.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "rasterio>=1.4.3",
    "ratelim==0.1.6",
    "referencing==0.35.1",
    "requests>=2.32.3",
    "rich==13.9.4",
    "rio-vrt>=0.3.1",
    "rpds-py==0.22.3",
    "scikit-learn>=1.6.0",
    "scipy>=1.14.1",
    "setuptools==75.6.0",
    "shapely>=2.0.6",
    "six>=1.17.0",
    "smmap==5.0.1",
    "snuggs>=1.4.7",
    "streamlit==1.41.1",
    "tenacity==9.0.0",
    "threadpoolctl>=3.5.0",
    "toml==0.10.2",
    "tornado==6.4.2",
    "typing-extensions==4.12.2",
    "tzdata>=2024.2",
    "urllib3>=2.2.3",
    "xyzservices>=2024.9.0",
    "zstandard==0.23.0",
]
